--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,138 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/* ---------- HEADER ---------- */
+.header {
+  min-height: 10vh;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(43, 43, 43);
+  position: relative;
+  background-color: white;
+  width: 100%;
+  /* make the header full width */
+  flex-shrink: 0;
+  /* Prevent the header from shrinking */
+  border: 2px solid rgb(226, 43, 165);
 }
 
-.App-link {
-  color: #61dafb;
+.SSlogoheader {
+  margin-left: 5%;
+  margin-top: 1%;
+  border: 2px solid rgb(43, 183, 226);
+  width: 65%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* .SSlogo {
+  width: 45%;
+} */
+
+.SSlogo-image {
+  max-width: 400px; /* Set a maximum width for the image */
+  height: auto; /* Maintain aspect ratio */
 }
+
+.teacher {
+  max-width: 300px; /* Set a maximum width for the image */
+  height: auto; /* Maintain aspect ratio */
+}
+
+.student {
+  max-width: 300px; /* Set a maximum width for the image */
+  height: auto; /* Maintain aspect ratio */
+}
+
+/* ---- Choose Teacher or Student ---- */
+
+.chooseTS {
+  display: flex;
+  margin-top: 10%;
+  padding-top: 2%;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  gap: 3%;
+}
+
+.chooseTimage {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 300px; /* Set a maximum width for the image */
+  height: auto; /* Maintain aspect ratio */}
+
+.chooseSimage {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 300px; /* Set a maximum width for the image */
+  height: auto; /* Maintain aspect ratio */
+}
+
+/* ---- LoginReg ---- */
+
+.mainLoginReg {
+  width: 90%;
+  margin-top: 2%;
+  padding-top: 2%;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
+  align-content: center;
+  /* border: 2px solid rgb(43, 226, 104); */
+}
+
+.loginDiv {
+  margin: auto;
+  height: 350px;
+  /* border: 2px solid rgb(43, 183, 226); */
+}
+
+.regDiv {
+  margin: auto;
+  height: 600px;
+  border: 2px solid rgb(226, 43, 180);
+}
+
+.loginForm {
+  padding-top: 80px;
+  width: 50%;
+  margin-left: 90px;
+  /* border: 2px solid blueviolet; */
+}
+
+.registerForm {
+  padding-top: 100px;
+  margin-left: 130px;
+  width: 50%;
+  margin-left: 110px;
+  /* border: 2px solid blueviolet; */
+}
+
+.registerForm {
+  padding-top: 100px;
+  margin-left: 130px;
+  width: 50%;
+  margin-left: 110px;
+  /* border: 2px solid blueviolet; */
+}
+
+input[type=text] {
+  margin: 5px 0;
+  width: 100%;
+}
+
+input[type=password] {
+  margin: 5px 0;
+  width: 100%;
+}
+
+select {
+  appearance: none;
+  background-image: none;
+  width: 100%;
+  height: 100%;
+  color: black;
+  cursor: pointer;
+  border: 1px solid black;
+  border-radius: 3px;
+}
+
